// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be default state 1`] = `
Object {
  "environment": "",
  "headerBackground": undefined,
  "links": Array [
    Object {
      "href": "https://unleash.github.io",
      "icon": "library_books",
      "title": "User documentation",
      "value": "User documentation",
    },
    Object {
      "href": "https://github.com/Unleash",
      "icon": "c_github",
      "title": "Source code on GitHub",
      "value": "GitHub",
    },
  ],
  "slogan": "The enterprise ready feature toggle service.",
}
`;

exports[`should be merged state all 1`] = `
Object {
  "environment": "dev",
  "headerBackground": "red",
  "links": Array [
    Object {
      "href": "https://unleash.github.io",
      "icon": "library_books",
      "title": "User documentation",
      "value": "User documentation",
    },
    Object {
      "href": "https://github.com/Unleash",
      "icon": "c_github",
      "title": "Source code on GitHub",
      "value": "GitHub",
    },
  ],
  "slogan": "hello",
}
`;

exports[`should only update headerBackground 1`] = `
Object {
  "environment": "",
  "headerBackground": "black",
  "links": Array [
    Object {
      "href": "https://unleash.github.io",
      "icon": "library_books",
      "title": "User documentation",
      "value": "User documentation",
    },
    Object {
      "href": "https://github.com/Unleash",
      "icon": "c_github",
      "title": "Source code on GitHub",
      "value": "GitHub",
    },
  ],
  "slogan": "The enterprise ready feature toggle service.",
}
`;
